<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home"
            />
        <item
            android:id="@+id/nav_locations"
            android:title="@string/locations"
            android:icon="@drawable/ic_restaurant"
            />
        <item
            android:id="@+id/nav_basket"
            android:title="@string/basket"
            android:icon="@drawable/ic_baseline_shopping_basket_24"
            />
        <item
            android:id="@+id/nav_map"
            android:title="@string/map"
            android:icon="@drawable/ic_baseline_map_24"
            />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/Logout"
            android:icon="@drawable/ic_settings"
            />


    </group>


</menu>