<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dashFontColor"
    android:onClick="back"
    tools:context=".User.restaurants">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:onClick="back"
                android:padding="15dp"
                android:src="@drawable/ic_arrow_back_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="Restaurants"
                android:textAllCaps="true"
                android:textColor="@color/colorSearchBar"
                android:textSize="45sp">

            </TextView>


        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="On Campus"
            android:textColor="@color/colorSearchBar"
            android:textSize="25sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/point_menu_nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="menu"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/login"
                android:elevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/resturant_image"
                        android:layout_width="match_parent"
                        android:layout_height="130dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/point"></ImageView>

                    <TextView
                        android:id="@+id/resturant_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="The Point"
                        android:textColor="@color/colorSearchBar"
                        android:textSize="20sp"></TextView>

                    <RatingBar
                        android:id="@+id/resturant_rating"
                        style="@style/Widget.AppCompat.RatingBar.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:rating="4">

                    </RatingBar>

                    <TextView
                        android:id="@+id/resturant_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="@string/thePoint"
                        android:textColor="@color/colorSearchBar">

                    </TextView>

                </LinearLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="menu"
            app:cardCornerRadius="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="275dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/login"
                android:elevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/resturant_image2"
                        android:layout_width="match_parent"
                        android:layout_height="140dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/refectory"></ImageView>

                    <TextView
                        android:id="@+id/resturant_title2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="The Refectory"
                        android:textColor="@color/colorSearchBar"
                        android:textSize="20sp"></TextView>

                    <RatingBar
                        android:id="@+id/resturant_rating2"
                        style="@style/Widget.AppCompat.RatingBar.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:rating="3">

                    </RatingBar>

                    <TextView
                        android:id="@+id/resturant_description2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="@string/theRefectory"
                        android:textColor="@color/colorSearchBar">

                    </TextView>

                </LinearLayout>

            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="menu">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="275dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/login"
                android:elevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"

                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/resturant_image3"
                        android:layout_width="match_parent"
                        android:layout_height="140dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ncafe_barista"></ImageView>

                    <TextView
                        android:id="@+id/resturant_title3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="Cafe Barista"
                        android:textColor="@color/colorSearchBar"
                        android:textSize="20sp"></TextView>

                    <RatingBar
                        android:id="@+id/resturant_rating3"
                        style="@style/Widget.AppCompat.RatingBar.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:rating="3.5">

                    </RatingBar>

                    <TextView
                        android:id="@+id/resturant_description3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="@string/Cafe"
                        android:textColor="@color/colorSearchBar">

                    </TextView>

                </LinearLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>


</androidx.core.widget.NestedScrollView>