<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.Dashboard"
    tools:openDrawer="start"
    android:id="@+id/drawer_layout">


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:theme="@style/navigationTheme"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/main_menu">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </RelativeLayout>
    </com.google.android.material.navigation.NavigationView>
    
    <LinearLayout
        android:id="@id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/dashFontColor">


        <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_marginTop="30dp"
                    android:id="@+id/menu_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_menuicon" />

                <TextView
                    android:id="@+id/appheader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/header"
                    android:textColor="@color/colorSearchBar"
                    android:textSize="32sp"
                    android:layout_centerHorizontal="true"
                    />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/appheader"
                    android:background="@drawable/custom_searchbar"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:elevation = "8dp"
                    >
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/search"
                        android:textColorHint="@color/colorSearchBar"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:id="@+id/search"
                        ></EditText>

                    <ImageView

                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_baseline_search_24"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp">

                    </ImageView>



                </RelativeLayout>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop= "20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/dashcolorBackF"
                >

                <LinearLayout
                    android:id="@+id/dashResturants"
                    android:layout_width="170dp"
                    android:layout_height="280dp"
                    android:background="@color/dashcolorBack"
                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="170dp"
                        android:layout_height="66dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginRight="10dp"
                        android:fontFamily="serif"
                        android:text="@string/resturants"
                        android:textAllCaps="true"
                        android:textColor="@color/dashFontColor"
                        android:textSize="20sp">

                    </TextView>

                    <TextView
                        android:layout_width="170dp"
                        android:layout_height="74dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="1dp"
                        android:layout_marginRight="10dp"
                        android:fontFamily="serif"
                        android:text="NTU Clifton Campus has a variety of food options"
                        android:textAllCaps="false"
                        android:textColor="@color/dashFontColor"
                        android:textSize="16sp">

                    </TextView>

                    <TextView
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="1dp"
                        android:layout_marginRight="10dp"
                        android:fontFamily="serif"
                        android:text="The Point open from 9am to 11pm"
                        android:textAllCaps="false"
                        android:textColor="@color/dashFontColor"
                        android:textSize="12sp">

                    </TextView>
                    <TextView
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="1dp"
                        android:layout_marginRight="10dp"
                        android:fontFamily="serif"
                        android:text="The Refectory open from 7am to 6pm"
                        android:textAllCaps="false"
                        android:textColor="@color/dashFontColor"
                        android:textSize="12sp">

                    </TextView>
                    <TextView
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="1dp"
                        android:layout_marginRight="10dp"
                        android:fontFamily="serif"
                        android:text="Cafe Barista open from 7am to 7pm"
                        android:textAllCaps="false"
                        android:textColor="@color/dashFontColor"
                        android:textSize="12sp">

                    </TextView>


                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/res_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:layout_marginLeft="6dp"
                    android:layout_toRightOf="@id/dashResturants">

                </androidx.recyclerview.widget.RecyclerView>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="70dp"
                android:padding="20dp"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="View the Menu"
                        android:textColor="@color/colorSearchBar"
                        android:textAllCaps="true"
                        android:layout_marginLeft="13dp"
                        android:textSize="20sp">
                    </TextView>

                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/foodRes"
                    android:layout_width="match_parent"
                    android:layout_height="180dp">

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>

        </LinearLayout>




    </ScrollView>

    </LinearLayout>





</androidx.drawerlayout.widget.DrawerLayout>